[package]
name = "regrafilo_core"
version = "0.0.1"
authors = ["ogata-k <ogtkzk712@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "push_node"
harness = false

[[bench]]
name = "push_edge"
harness = false